test/fail/fail_14.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: [Line 7] Error: at '}': Can not return a function from the function

x = func() {
    func() { };
};
x();